...
    <string name="sign_in_with_google">SIGN IN WITH GOOGLE</string>
    <string name="sign_in_with_email">SIGN IN WITH EMAIL</string>
    <string name="sign_in_skip">SKIP</string>
    <string name="sign_in_base_image_description">sign_in_base_image</string>

    <!-- Add Clean Event activity -->
    <string name="edit_clean_event_activity_title">Edit clean event</string>
    <string name="add_clean_event_activity_title">Add clean event</string>
    <string name="invalid_address">Invalid address</string>
    <string name="required">Required !</string>

    <!-- Clean Event Details activity -->
    <string name="details">Details</string>
...
