<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".controllers.activities.BinDetailsActivity"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/bin_details_activity_appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary"
        app:titleTextColor="@android:color/white"
        />


    <androidx.cardview.widget.CardView
        android:id="@+id/bin_details_activity_cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bin_details_activity_appbar"
        >
        <ImageView
            android:id="@+id/bin_details_activity_photo"
            android:layout_width="250dp"
            android:layout_height="250dp"
            tools:ignore="ContentDescription" />

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bin_details_activity_like_layout"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bin_details_activity_cardView"
        android:background="@color/colorPrimary"
        android:layout_marginTop="10dp"
        >

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/bin_details_activity_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_percent="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/bin_details_activity_like_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="93dp"
            android:layout_height="90dp"
            android:drawableTop="@drawable/ic_like"
            app:drawableTint="@color/grey"
            android:text="@string/like"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/bin_details_activity_guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"

            />

        <Button
            android:id="@+id/bin_details_activity_dislike_button"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="93dp"
            android:layout_height="90dp"
            android:drawableTop="@drawable/ic_unlike"
            app:drawableTint="@color/grey"
            android:text="@string/dislike"
            android:textColor="@color/grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/bin_details_activity_guideline"
            app:layout_constraintTop_toTopOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/bin_details_activity_scroll_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bin_details_activity_like_layout">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/bin_details_activity_address_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="10dp"
                android:textStyle="bold"
                android:text="@string/title"
                />

            <TextView
                android:id="@+id/bin_details_activity_address_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/interrogation_point"
                />

            <TextView
                android:id="@+id/bin_details_activity_bin_waste_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="20dp"
                android:text="@string/authorized_wastes"
                android:textStyle="bold"
                />

            <LinearLayout
                android:id="@+id/bin_details_activity_bin_waste_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:orientation="vertical"
                >

            </LinearLayout>


            <TextView
                android:id="@+id/bin_details_activity_bin_comment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/bin_comment"
                android:layout_marginStart="10dp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/bin_details_activity_bin_comment_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="10dp"
                android:text="@string/interrogation_point"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>